tests/fixtures/stl/errors/test_eval_circular_define.stl
// Error: circular dependency between define initializers
// expect-error: circular dependency between variable initializers
define a = (b + 1);
define b = (a + 1);
prompt p { is { f is text<length=(a)>; } return { use f; } }
export p as main;
